# blender-camera

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/blender_camera/: __main__.py  app.py  app_state.py  blender.py  blender_frame.py  blender_frame_loader.py  blender_render_camera.py  blender_script.py  frame.py  render_frame_script.py  utils.py
src/blender_camera/api/: __init__.py
src/blender_camera/api/routes/: __init__.py
src/blender_camera/api/routes/scenes/: __init__.py
src/blender_camera/api/routes/scenes/scene_id/: __init__.py
src/blender_camera/api/routes/scenes/scene_id/cameras/: __init__.py  camera_id.py
src/blender_camera/api/routes/scenes/scene_id/entities/: __init__.py  entity_id.py
src/blender_camera/models/: camera.py  camera_intrinsics.py  camera_model.py  entity_model.py  frame.py  pose.py  scene.py  scene_model.py
src/blender_camera/models/components/: has_camera_intrinsics.py  has_id.py  has_pose.py
src/blender_camera/models/entities/: camera.py  entity.py
src/blender_camera/scripts/: render_frame_script.py
src/scripts/: __init__.py  blender_utils.py  render_frame.py  render_ply.py  render_png.py
tests/integration/: conftest.py  test_blender.py
tests/integration/resources/: cube.blend
tests/integration/scripts/: test_render_frame.py
tests/unit/: conftest.py
tests/unit/blender_camera/: test_blender.py
tests/unit/models/: test_camera_model.py  test_entity_model.py  test_frame.py  test_pose.py  test_scene_model.py
