[project]
name = "blender-camera"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi[standard]>=0.116.2",
    "loguru>=0.7.3",
    "open3d>=0.19.0",
    "openexr>=3.4.0",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "fake-bpy-module>=20250921",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.0",
]

[project.scripts]
serve = "blender_camera.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
